--- a/src/screens/MapScreen.module.css
+++ b/src/screens/MapScreen.module.css
@@ -8,7 +8,7 @@
 .topBar {
   display: flex;
   flex-direction: column;
-  gap: var(--sp-3);
+  gap: var(--sp-2);
   margin-bottom: var(--sp-5);
 }
 
@@ -21,7 +21,7 @@
 
 .langCenterRow {
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
 }
 
 .statsBtn {
